Fixed upload bit

--- a/scripts/wip/WebAVRFlasher/lib/views/pages/index.ejs
+++ b/scripts/wip/WebAVRFlasher/lib/views/pages/index.ejs
@@ -13,11 +13,10 @@
 	<!-- Begin page content -->
 	<div class="container">
 		<h1>Flash HEX file</h1>
-		<form method="post" enctype="multipart/form-data" id="UploadForm"  action="/upload">
-		  <input type="file" name="hexFile" />
-		  <button type="submit" id="btn">Upload And Flash</button>
+		<form id="UploadForm" enctype="multipart/form-data" action="/upload" method="post">
+			<input type="file" name="firmware" />
+			<button type="submit" id="btn">Upload And Flash</button>
 		</form>
-	 
 		<div id="response"></div>
 	</div>	
 
